# external-heap

./: CMakeLists.txt  README.md  buffer_tree.cpp  buffer_tree.h  external_heap.cpp  external_heap.h  main.cpp  storage.cpp  storage.h
btree/: CMakeLists.txt  btree.h  btree_data.h  btree_tests.cpp  serialize.cpp  serialize.h
btree/serialize/: CMakeLists.txt  btree.pb.cc  btree.pb.h  btree.proto
heap/: CMakeLists.txt  heap.h  heap_tests.cpp
simple/: CMakeLists.txt  README.md  comparsion.cpp  heap.h
storage/: CMakeLists.txt  basic_storage.h  cache.h  directory.h  memory.h  node_id.h
utils/: undefined.h
